namespaces/media/nzbhydra/spec-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: srv
spec:
  template:
    spec:
      containers:
      - name: srv

        image: linuxserver/nzbhydra2
        ports:
        - containerPort: 5076
          name: http
          protocol: TCP

        resources:
          requests:
            memory: 500Mi
            cpu: 25m
          limits:
            memory: 1000Mi
            cpu: 1000m

        volumeMounts:
        - name: config
          mountPath: /config

      volumes:
      - name: config
        hostPath:
          path: /tank/data/nzbhydra
          type: Directory
